# Velox-MPC

protocol/: Cargo.toml  build.rs
protocol/acss_ab/: Cargo.toml
protocol/acss_ab/src/: context.rs
protocol/acss_ab/src/protocol/: avss.rs  ctrbc.rs  init.rs  ra.rs
protocol/benches/: field_gemm.rs
protocol/cuda/: bn254_gemm.cu  bn254_gemm.cuh  gpu_field_gemm.cuh  gpu_field_gemm_wrapper.cu  gpu_fields.cuh
protocol/mpc/: Cargo.toml
protocol/mpc/src/: context.rs  input.rs
protocol/mpc/src/protocol/multiplication/: lin_mult.rs  output.rs  quad_mult.rs  weak_mult.rs
protocol/mpc/src/protocol/online_phase/: input_sharings.rs
protocol/mpc/src/protocol/rand_sharings/: rand_bit.rs  rand_mask.rs  rand_sh.rs
protocol/mpc/src/protocol/tuple_verification/: common_coin.rs  compress_tup.rs
protocol/sh2t/: Cargo.toml
protocol/sh2t/src/: context.rs
protocol/sh2t/src/protocol/: ctrbc.rs  init.rs
protocol/src/: byte_conv.rs  gpu_ffi.rs  lib.rs  poly.rs  types.rs
protocol/src/mersenne_61/: extensions.rs  field.rs  mod.rs  ser.rs  sqrt.rs
protocol/tests/: field_gemm_gpu.rs  gpu_ffi_smoke.rs
testdata/inputs/: inp_gen.py
